# OS-Competition-CS-Games-2018

./: README.md  install.sh
c_api/: CMakeLists.txt
c_api/include/: kiki_api.h
c_api/solution_src/: CMakeLists.txt  kiki_api.c
c_api/test/: CMakeLists.txt  bufferIdIsCoherentWithIdFunction_test.cc  bufferLengthIsCorrect_test.cc  bufferSizeIsOk_test.cc  bufferWasEffectivelyCreated_test.cc  canCount20Buffers_test.cc  canCount2Buffers_test.cc  canCreate20Buffers_test.cc  canCreate2Buffers_test.cc  canCreateNewBuffer_test.cc  canDeinitDeviceWithoutCrash_test.cc  canGetStatusWhenIoctlFailed_test.cc  canGetStatusWhenJustInitiated_test.cc  canInitDeviceWithoutCrash_test.cc  canInspectOneBufferEffectively_test.cc  canReadANonWrittenBufferFully_test.cc  canReadAWrittenBufferFully_test.cc  canReadAWrittenBufferUntilNULChar_test.cc  canReinitAfterDeinitWithoutCrash_test.cc  canSaveBufferAndLoadItBack_test.cc  canWriteToABufferFully_test.cc  canWriteToABufferPartially_test.cc  cannotInitDeviceTwice_test.cc  cannotWriteIfSizeGreaterThanMax_test.cc  clearBuffersGetsEffectivelyCalled_test.cc  common.hh  countIoctlIsEffectivelyCalled_test.cc  countIsZeroAfterInit_test.cc  idIsCoherentWhenNewBuffersCreated_test.cc  listHasPlausibleIdsWhenHasMultipleElements_test.cc  listHasSameIdsWhenHasMultipleElements_test.cc  listIsNotNullWhenHasMultipleElements_test.cc  listIsNotNullWhenHasOneElement_test.cc  listIsSetToNullWhenNoBuffer_test.cc  savingAndLoadingKeepSameId_test.cc  statusIsEffectivelyGotten_test.cc
kernel_module/: Makefile  README.md
statement/: statement.en.md  statement.fr.md
(+71 files in other folders)
